# WSL-Sensie

./: .env.example  README.md  config.py  gitignore  requirements.txt
api/: __init__.py  server.py
cli/: __init__.py  sensei_cli.py
collectors/: __init__.py  bash_history_collector.py  config_file_scanner.py  powershell_history_collector.py
data/sample/: .bashrc  Makefile  bash_history.txt  docker-compose.yml  nginx.conf  powershell_history.txt  pyproject.toml  startup.sh
indexing/: __init__.py  chunker.py  embed_store.py
rag/: __init__.py  rag_pipeline.py
retrieval/: __init__.py  semantic_search.py
scripts/: index_environment.py
tests/: __init__.py  test_chunker.py  test_collectors.py  test_rag_pipeline.py
